# seattle-python-401n1

./: README.md  _config.yml  tips_and_tricks.md
class-02/demo/dsa/: README.md
class-03/demo/exceptions/: exceptions.ipynb
class-03/demo/file-io/: file_io.ipynb
class-03/demo/recursion/: pyproject.toml
class-04/demo/classes/: test.py  types.py  wizzard.py
class-04/demo/madlib-cli/: pyproject.toml
class-04/demo/recursion/: main.py
class-05/: README.md
class-05/demo/linked-list/: pyproject.toml
class-06/demo/dice-roll/: pyproject.toml  roller.py  test_roller.py
class-08/linked-list/: pyproject.toml
class-09/: README.md
class-12/demo/: cereal.ipynb  pyproject.toml
class-12/solution/chess-board/: chess_board.ipynb  pyproject.toml
class-13/: README.md
class-14/: README.md
class-14/demo/fun_with_seaborn/: pyproject.toml  seaborn.ipynb
class-16/: README.md  midterm-project-ideas.md
class-18/: README.md
class-18/cipher/: pyproject.toml
class-19/: README.md
class-26/: README.md
class-28/demo/: pyproject.toml
class-29/: README.md
class-32/: README.md
class-33/: README.md
class-34/blogapi-permissions/: docker-compose.yml  sample-env.txt
class-35/demo/: pyproject.toml
class-36/: README.md
class-37/: README.md
class-38/: README.md
class-39/lab/: README.md
class-41/: README.md
class-41/lab/: README.md
class-41/solution/: README.md
class-42/: README.md
class-43/lab/: README.md
config/: .gitignore
game-of-greed/: pyproject.toml
game-of-greed/game_of_greed/: game_logic.py  in-class.game.py  player_bot.py
(+87 files in other folders)
