[tool.poetry]
name = "vinyl"
version = "0.1.0"
description = ""
authors = ["Merry Cimakasky <mkcimakasky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
