[tool.poetry]
name = "chess-board"
version = "0.1.0"
description = ""
authors = ["JB <jb.tellez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.2"
matplotlib = "^3.2.1"
jupyterlab = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
